# merge-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  release.yml  rust.yml
docs/: design.md
merge-derive/: Cargo.toml
merge-rs/: Cargo.toml
merge-rs-derive/: Cargo.toml
merge-rs-derive/src/: lib.rs
merge-rs/src/: collections.rs  lib.rs  monad.rs
merge-rs/src/mergeable/: mod.rs
merge-rs/src/mergeable/ops/: arith.rs  bit.rs  mod.rs
src/: lib.rs
tests/: merge_mut_tests.rs  merge_tests.rs
usage/: Cargo.toml
usage/src/: main.rs
