[package]
name = "merge-rs"
description = "A small library that cuts down on the amount of code required to merge two arbitrary structs into a new struct."
repository = "https://github.com/dhable/merge-rs"
version = "0.2.0"
edition = "2021"
rust-version = "1.58.1"
license = "MIT"
readme = "../README.md"

[dependencies]
derivative = "2.2.0"

[dev-dependencies]
concat-idents = "1.1.3"
